Add lasagna content

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,9 +2,29 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Lasagna Recipie</title>
+        <title>Lasagna Recipieg</title>
     </head>
     <body>
         <h1>Lasagna</h1>
+        <figure>
+            <img src="../images/lasagna.jpg" alt="Finished lasagna">
+            <figcaption>Finished Lasagna</figcaption>
+        </figure>
+        <p>A delicious lasagna. Yummy in my tummy then out my bummy.</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>Lasagna noodles</li>
+            <li>Lasagna meat sauce</li>
+            <li>Bechamel sauce</li>
+            <li>Mozzarella cheese</li>
+        </ul>
+        <ol>
+            <li>Preheat oven to 200c</li>
+            <li>In a cassarole dish, put a layer of meat sauce</li>
+            <li>Place noodle sheets over sauce</li>
+            <li>Layer bechamel sauce over noodle sheets</li>
+            <li>Repeat layers, sauce,noodle, bechamel two more times</li>
+            <li>On top layer of bechamel place shredded/cubed mozzarella</li>
+        </ol>
     </body>
 </html>
