Add new recipies to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
     <head lang="en">
         <title>Odin Recipies</title>
-        <meta charset="en-8">
+        <meta charset="utf-8">
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/quesadilla.html">Quesadilla</a>
+        <a href="recipes/dal.html">Dal</a>
     </body>
 </html>
